--- a/sample.html
+++ b/sample.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>はじめてのHTML</title>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
+    <style type="text/css">
+    body {
+    background: #00FFFF;
+    }
+    h1{
+    color: brown;
+    }
         p{
         color: red;
         }
